--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/Register/RegisterViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/Register/RegisterViewController.xib
@@ -38,22 +38,22 @@
                     <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3QE-BP-DCk" userLabel="ContentArea">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="969"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="926"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8X-iY-j54">
-                                    <rect key="frame" x="20" y="539.33333333333337" width="335" height="24.333333333333371"/>
+                                    <rect key="frame" x="20" y="536.66666666666663" width="335" height="23.333333333333371"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MrS-9O-eT2">
-                                    <rect key="frame" x="120.66666666666667" y="66" width="133.66666666666663" height="39"/>
+                                    <rect key="frame" x="128.33333333333334" y="66" width="118.66666666666666" height="37.333333333333343"/>
                                     <fontDescription key="fontDescription" name="InterV_Extra-Bold" family="Inter V" pointSize="32"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNe-so-Svv">
-                                    <rect key="frame" x="47.666666666666657" y="714.66666666666663" width="280" height="54.333333333333371"/>
+                                    <rect key="frame" x="47.666666666666657" y="671" width="280" height="53.333333333333371"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="280" id="aG1-u2-iVm"/>
                                     </constraints>
@@ -68,7 +68,7 @@
                                     </connections>
                                 </button>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V9D-vv-PuF" userLabel="Password Textfield">
-                                    <rect key="frame" x="20" y="583.66666666666663" width="335" height="34"/>
+                                    <rect key="frame" x="20" y="580" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -76,25 +76,25 @@
                                     </connections>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personal ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLZ-uG-xp0">
-                                    <rect key="frame" x="20" y="342.66666666666669" width="335" height="24.333333333333314"/>
+                                    <rect key="frame" x="20" y="340" width="335" height="24.333333333333314"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mF-a2-N5D">
-                                    <rect key="frame" x="20" y="244.33333333333334" width="335" height="24.333333333333343"/>
+                                    <rect key="frame" x="20" y="241.66666666666669" width="335" height="24.333333333333314"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Student ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAj-S9-nQm">
-                                    <rect key="frame" x="20" y="441" width="335" height="24.333333333333314"/>
+                                    <rect key="frame" x="20" y="438.33333333333331" width="335" height="24.333333333333314"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gtm-Pq-uNy" userLabel="Email Textfield">
-                                    <rect key="frame" x="20" y="190.33333333333334" width="335" height="34"/>
+                                    <rect key="frame" x="20" y="187.66666666666666" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -102,7 +102,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Nr-k1-Xd7" userLabel="Name Textfield">
-                                    <rect key="frame" x="20" y="288.66666666666669" width="335" height="34"/>
+                                    <rect key="frame" x="20" y="286" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -111,7 +111,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f4E-NY-o9t" userLabel="Student ID Textfield">
-                                    <rect key="frame" x="20" y="485.33333333333337" width="335" height="34"/>
+                                    <rect key="frame" x="20" y="482.66666666666663" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -119,7 +119,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EcB-DZ-FTW" userLabel="Personal ID Textfield">
-                                    <rect key="frame" x="20" y="387" width="335" height="34"/>
+                                    <rect key="frame" x="20" y="384.33333333333331" width="335" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -127,13 +127,13 @@
                                     </connections>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GyR-xJ-TKp">
-                                    <rect key="frame" x="20" y="146" width="335" height="24.333333333333343"/>
+                                    <rect key="frame" x="20" y="144.33333333333334" width="335" height="23.333333333333343"/>
                                     <fontDescription key="fontDescription" name="InterV" family="Inter V" pointSize="20"/>
                                     <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHV-NJ-0B0">
-                                    <rect key="frame" x="20" y="637.66666666666663" width="335" height="17"/>
+                                    <rect key="frame" x="20" y="634" width="335" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" systemColor="systemRedColor"/>
                                     <nil key="highlightedColor"/>
@@ -166,7 +166,7 @@
                                 <constraint firstItem="GyR-xJ-TKp" firstAttribute="top" secondItem="MrS-9O-eT2" secondAttribute="bottom" constant="41" id="Urk-yV-k35"/>
                                 <constraint firstItem="EcB-DZ-FTW" firstAttribute="leading" secondItem="3QE-BP-DCk" secondAttribute="leading" constant="20" id="YMk-Dz-MiH"/>
                                 <constraint firstItem="4mF-a2-N5D" firstAttribute="top" secondItem="gtm-Pq-uNy" secondAttribute="bottom" constant="20" id="YyX-1i-ubP"/>
-                                <constraint firstItem="WNe-so-Svv" firstAttribute="top" secondItem="YHV-NJ-0B0" secondAttribute="bottom" constant="60" id="a3v-Rd-CWL"/>
+                                <constraint firstItem="WNe-so-Svv" firstAttribute="top" secondItem="YHV-NJ-0B0" secondAttribute="bottom" constant="20" id="a3v-Rd-CWL"/>
                                 <constraint firstItem="eAj-S9-nQm" firstAttribute="top" secondItem="EcB-DZ-FTW" secondAttribute="bottom" constant="20" id="aC3-7N-bTr"/>
                                 <constraint firstAttribute="trailing" secondItem="lLZ-uG-xp0" secondAttribute="trailing" constant="20" id="e2R-zN-rgW"/>
                                 <constraint firstItem="lLZ-uG-xp0" firstAttribute="top" secondItem="8Nr-k1-Xd7" secondAttribute="bottom" constant="20" id="gJ8-yb-mKD"/>
@@ -175,7 +175,7 @@
                                 <constraint firstItem="eAj-S9-nQm" firstAttribute="leading" secondItem="3QE-BP-DCk" secondAttribute="leading" constant="20" id="jiX-Fy-mrY"/>
                                 <constraint firstItem="MrS-9O-eT2" firstAttribute="top" secondItem="3QE-BP-DCk" secondAttribute="top" constant="66" id="lMs-Zl-ZyN"/>
                                 <constraint firstAttribute="trailing" secondItem="YHV-NJ-0B0" secondAttribute="trailing" constant="20" id="oQC-ky-Xtq"/>
-                                <constraint firstAttribute="bottom" secondItem="WNe-so-Svv" secondAttribute="bottom" constant="200" id="tNR-hV-2yK"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="WNe-so-Svv" secondAttribute="bottom" constant="20" id="tNR-hV-2yK"/>
                                 <constraint firstAttribute="trailing" secondItem="4mF-a2-N5D" secondAttribute="trailing" constant="20" id="wNc-mu-llk"/>
                                 <constraint firstAttribute="trailing" secondItem="f4E-NY-o9t" secondAttribute="trailing" constant="20" id="zwc-jd-Rak"/>
                             </constraints>
@@ -185,6 +185,8 @@
                         <constraint firstAttribute="bottom" secondItem="3QE-BP-DCk" secondAttribute="bottom" id="5Md-7j-4JF"/>
                         <constraint firstAttribute="trailing" secondItem="3QE-BP-DCk" secondAttribute="trailing" id="GFv-GJ-ca5"/>
                         <constraint firstItem="3QE-BP-DCk" firstAttribute="top" secondItem="3ki-CV-knb" secondAttribute="top" id="K6K-1L-phf"/>
+                        <constraint firstItem="3QE-BP-DCk" firstAttribute="height" secondItem="3ki-CV-knb" secondAttribute="height" multiplier="1.26158" id="QgQ-Cg-d1x"/>
+                        <constraint firstItem="3QE-BP-DCk" firstAttribute="width" secondItem="3ki-CV-knb" secondAttribute="width" id="TF3-IG-qDq"/>
                         <constraint firstItem="3QE-BP-DCk" firstAttribute="centerX" secondItem="3ki-CV-knb" secondAttribute="centerX" id="oyj-VR-73s"/>
                         <constraint firstItem="3QE-BP-DCk" firstAttribute="leading" secondItem="3ki-CV-knb" secondAttribute="leading" id="wa7-5Z-yj8"/>
                     </constraints>
